recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:12: error: ')' expected but '}' found.
    }
    ^